feat: AGEL-1223 начало локализации

--- a/src/shared/model/i18n/locales/en/en.json
+++ b/src/shared/model/i18n/locales/en/en.json
@@ -1,18 +1,51 @@
 {
-  "Условия пролонгации депозита": "Условия пролонгации депозита",
-  "Ваш депозит успешно пролонгирован": "Ваш депозит успешно пролонгирован",
-  "Вернуться к странице депозита": "Вернуться к странице депозита",
-  "Срок пролонгации": "Срок пролонгации",
-  "мес": "мес.",
-  "Пролонгировать депозит": "Пролонгировать депозит",
+  " карта": " карта.",
+  "Надежная карта на каждый день": "Надежная карта на каждый день",
+  "Уровень премиальность": "Premium level",
+  "Валюта счета": "Account currency",
+  "Да": "Yes",
+  "Нет": "No",
+  "Виртуальная": "Virtual",
+  "Плата за использование": "Плата за использование",
+  "Срок действия": "Expiry date",
+  "Баланс": "Balance",
+  "Номер карты": "Card number",
+  "Информация по карте": "Card information",
+  "Перевести": "Перевести",
+  "Оформить карту": "Apply for a card",
+  "Показать больше": "Show more",
+  "Процентная ставка": "Interest rate",
+  "Сумма на депозитном счете": "Deposit balance",
+  "Окончание срока вклада": "Deposit end of term",
+  "Адрес": "Адрес",
+  "Адрес куда банк будет направлять почтовую корреспонденцию": "Адрес куда банк будет направлять почтовую корреспонденцию",
+  "Улица": "Улица",
+  "Дом": "Дом",
+  "Квартира": "Квартира",
+  "Город": "Город",
+  "Индекс": "Индекс",
+  "Для изменения адреса регистрации необходимо обратиться в ближайшее отделение банка": "Для изменения адреса регистрации необходимо обратиться в ближайшее отделение банка",
+  "Контактные данные": "Контактные данные",
+  "Телефон нужен для того, чтобы подтверждать операции и настройки счета": "Телефон нужен для того, чтобы подтверждать операции и настройки счета",
+  "Телефон": "Телефон",
+  "Чтобы привязать новый телефон позвоните по номеру 8 800 666-99-98": {
+    " Звонок бесплатный": "Чтобы привязать новый телефон позвоните по номеру 8 800 666-99-98. Звонок бесплатный"
+  },
+  "На почту приходят счета и справки": "На почту приходят счета и справки",
+  "На данный момент \n у Вас нет соответствующих карт": "You currently have no corresponding cards",
+  "Создать карту": "Create a card",
+  "Отменить": "Отменить",
+  "Сохранить": "Сохранить",
+  "Текущий пароль": "Текущий пароль",
+  "Новый пароль": "Новый пароль",
+  "Подтвердите новый пароль": "Confirm new password",
+  "Продолжить": "Continue",
   "Повторная отправка через": "Resend in",
   "Отправить смс еще раз": "Resend SMS",
   "На Ваш номер телефона отправлен 6-значный код подтверждения": "A 6-digit confirmation code has been sent to your phone number",
   "Далее": "Next",
-  "Подтвердите новый пароль": "Confirm new password",
   "Подтвердите пароль": "Confirm password",
   "Отправить": "Send",
-  "Продолжить": "Continue",
   "Номер телефона": "Phone number",
   "Номер телефона должен содержать 11 цифр": "Phone number must contain 11 digits",
   "Нажав кнопку «Далее», вы соглашаетесь с ": "By clicking the “Next” button, you agree to ",
@@ -22,16 +55,13 @@
   "и даёте согласие на сбор и обработку информации": "and consent to the collection and processing of information",
   "Отклонить": "Decline",
   "Пароль": "Password",
+  "Включен CapsLock": "Включен CapsLock",
   "Восстановление пароля": "Password recovery",
   "Выйти": "Log out",
+  "У вас уже есть аккаунт?": "Do you already have an account?",
+  "Зарегистрируйтесь": "Sign up",
+  "Авторизуйтесь": "Sign in",
   "Назад": "Back",
-  "Войдите в личный кабинет": "Log in to your personal account",
-  "Введите код из смс": "Enter the code from SMS",
-  "Введите пароль": "Enter password",
-  "Придумайте новый пароль": "Come up with a new password",
-  "Регистрация": "Registration",
-  "Придумайте пароль": "Create a password",
-  "Счета": "Accounts",
   "Кредитный счет": "Credit account",
   "Дебетовый счет": "Debit account",
   "Депозитный счет": "Deposit account",
@@ -50,61 +80,11 @@
   "Не удалось открыть счет": "Failed to open an account",
   "Мы открыли вам счет!": "We have opened an account for you!",
   "Перейти к списку счетов": "Go to account list",
-  "Карты": "Cards",
-  "Создать карту": "Create a card",
-  "Виртуальная": "Virtual",
-  "На данный момент \n у Вас нет соответствующих карт": "You currently have no corresponding cards",
-  "Номер карты": "Card number",
-  "Баланс": "Balance",
-  "Валюта счета": "Account currency",
-  "Уровень премиальность": "Premium level",
-  "Информация по карте": "Card information",
-  "Оформить карту": "Apply for a card",
-  "Показать больше": "Show more",
-  "Срок действия": "Expiry date",
-  "Мои карты": "My cards",
-  "Карточные продукты": "Card products",
   "Bce": "All",
   "Кредитная": "Credit",
   "Дебетовая": "Debit",
   "Депозитная": "Deposit",
   "МИР": "MIR",
-  "Информация по депозиту": "Deposit information",
-  "Оформить": "Apply",
-  "Пополнить": "Top-up",
-  "Да": "Yes",
-  "Нет": "No",
-  "Отозвать": "Withdraw",
-  "Пролонгировать": "Prolong",
-  "Мои депозиты": "My deposits",
-  "Депозиты": "Deposits",
-  "Отключить автопролонгацию": "Disable automatic prolongation",
-  "Включить автопролонгацию": "Enable automatic prolongation",
-  "Автоматическая пролонгация": "Automatic prolongation",
-  "Депозиты A-geld": "Deposits A-geld",
-  "Процентная ставка": "Interest rate",
-  "Сумма на депозитном счете": "Deposit balance",
-  "Изначальная сумма депозита": "Initial deposit amount",
-  "Схема депозита": "Deposit scheme",
-  "К списку депозитов": "Go to deposit list",
-  "Срочный": "Urgent",
-  "№ счета с процентами": "Account number with interest",
-  "Отзывной": "Revocable",
-  "Процентная ставка при досрочном отзыве депозита": "Interest rate for early deposit withdrawal",
-  "Длительность существования": "Term of existence",
-  "Окончание срока вклада": "Deposit end of term",
-  "Выполнить депозит": "Make a deposit",
-  "На данный момент \n у Вас нет депозитов": "You currently have no deposits",
-  "Главная": "Main",
-  "Курсы валют": "Exchange rates",
-  "Контакты": "Contacts",
-  "Список услуг": "Service list",
-  "Документы": "Documents",
-  "Вопросы и ответы": "Q&A",
-  "Банки и отделения": "Banks and branches",
-  "Кредиты": "Loans",
-  "Переводы": "Transfers",
-  "Платежи": "Payments",
   "Все": "All",
   "Активный": "Active",
   "Закрытый": "Closed",
@@ -112,10 +92,66 @@
   "Основной": "Main",
   "Автопролонгация": "Autoprolongation",
   "Автопролонгация отключена": "Autoprolongation disabled",
-  "У вас уже есть аккаунт?": "Do you already have an account?",
-  "Зарегистрируйтесь": "Sign up",
-  "Авторизуйтесь": "Sign in",
+  "Реквизиты": "Requisites",
+  "Комиссия за снятие наличных в банкомате другого банка": "Commission for cash withdrawal at another bank's ATM",
+  "Комиссия за снятие наличных в банкомате банка-партнёра": "Commission for cash withdrawal at a partner bank's ATM",
+  "Комиссия за снятие наличных в другой валюте в банкоматах банков за рубежом": "Commission for cash withdrawal in another currency at ATMs of banks abroad",
+  "Комиссия за переводы при исчерпании лимита": "Commission for transfers when the limit is exceeded",
+  "Комиссия за оплату при исчерпании лимита": "Commission for payment when the limit is exceeded",
+  "Лимит на снятие денег в день": "Daily cash withdrawal limit",
+  "Лимит на снятие денег в месяц": "Monthly cash withdrawal limit",
+  "Лимит на сумму переводов в день": "Daily transfer limit",
+  "Лимит на сумму переводов в месяц": "Monthly transfer limit",
+  "Лимит на безналичные платежи в день": "Daily non-cash payment limit",
+  "Лимит на безналичные платежи в месяц": "Monthly non-cash payment limit",
+  "Лимит на снятие денег в день без комиссии": "Daily cash withdrawal limit without commission",
+  "Лимит на снятие денег в месяц без комиссии": "Monthly cash withdrawal limit without commission",
+  "Лимит на сумму переводов в день без комиссии": "Daily transfer limit without commission",
+  "Лимит на сумму переводов в месяц без комиссии": "Monthly transfer limit without commission",
+  "Лимит на безналичные платежи в день без комиссии": "Daily non-cash payment limit without commission",
+  "Лимит на безналичные платежи в месяц без комиссии": "Monthly non-cash payment limit without commission",
+  "Реквизиты карты": "Card details",
+  "Тарифы и комиссии": "Rates and commissions",
+  "Лимиты": "Limits",
+  "История операций": "Transaction history",
+  "Выписка": "Statement",
+  "Пополнить": "Top-up",
+  "Изменить пин-код": "Change PIN code",
+  "Запретить операции": "Prohibit operations",
+  "Заблокировать карту": "Block card",
+  "Действия с картой": "Card actions",
+  "Условия": "Terms",
+  "Карты": "Cards",
+  "Мои карты": "My cards",
+  "Карточные продукты": "Card products",
+  "На данный момент \n у Вас нет депозитов": "You currently have no deposits",
+  "Оформить депозит": "Open deposit",
+  "Депозиты": "Deposits",
+  "Мои депозиты": "My deposits",
+  "Депозиты A-geld": "Deposits A-geld",
+  "2023, АО «A-Geld», официальный сайт, универсальная лицензия ЦБ РФ № 2475": "2023, A-geld JSC, official site, universal license of the Central Bank of the Russian Federation No. 2475",
+  "для звонков по России": "for calls within Russia",
+  "Наше приложение": "Our app",
   "Банкоматы и отделения": "Banks and branches",
+  "Курсы валют": "Exchange rates",
+  "Контакты": "Contacts",
+  "Список услуг": "Service list",
+  "Документы": "Documents",
+  "Вопросы и ответы": "Q&A",
   "Личные данные": "Personal data",
-  "Войти": "Log in"
+  "Войти": "Log in",
+  "Регистрация": "Registration",
+  "Новая карта": "New card",
+  "Переводы": "Transfers",
+  "Между счетами": "Between accounts",
+  "По номеру телефона": "By phone number",
+  "По номеру карты": "By card number",
+  "По реквизитам": "By requisites",
+  "Платежи": "Payments",
+  "Мобильная связь": "Mobile communication",
+  "Коммунальные платежи": "Utility payments",
+  "Успех": "Success",
+  "Ошибка": "Error",
+  "Операция прошла успешно": "Operation completed successfully",
+  "Повторите запрос позже": "Please try again later"
 }
