--- a/src/shared/model/i18n/locales/ru/ru.json
+++ b/src/shared/model/i18n/locales/ru/ru.json
@@ -1,36 +1,22 @@
 {
-  "Условия пролонгации депозита": "Условия пролонгации депозита",
-  "Ваш депозит успешно пролонгирован": "Ваш депозит успешно пролонгирован",
-  "Вернуться к странице депозита": "Вернуться к странице депозита",
-  "Срок пролонгации": "Срок пролонгации",
-  "мес": "мес.",
-  "Пролонгировать депозит": "Пролонгировать депозит",
-  "Повторная отправка через": "Повторная отправка через",
-  "Отправить смс еще раз": "Отправить смс еще раз",
-  "На Ваш номер телефона отправлен 6-значный код подтверждения": "На Ваш номер телефона отправлен 6-значный код подтверждения",
-  "Далее": "Далее",
-  "Подтвердите новый пароль": "Подтвердите новый пароль",
-  "Подтвердите пароль": "Подтвердите пароль",
-  "Отправить": "Отправить",
-  "Продолжить": "Продолжить",
-  "Номер телефона": "Номер телефона",
-  "Номер телефона должен содержать 11 цифр": "Номер телефона должен содержать 11 цифр",
-  "Нажав кнопку «Далее», вы соглашаетесь с ": "Нажав кнопку «Далее», вы соглашаетесь с ",
-  "Правилами дистанционного банковского обслуживания": "Правилами дистанционного банковского обслуживания",
-  "и": "и",
-  "Политикой конфиденциальности": "Политикой конфиденциальности",
-  "и даёте согласие на сбор и обработку информации": "и даёте согласие на сбор и обработку информации",
-  "Отклонить": "Отклонить",
-  "Пароль": "Пароль",
-  "Восстановление пароля": "Восстановление пароля",
-  "Выйти": "Выйти",
-  "Назад": "Назад",
-  "Войдите в личный кабинет": "Войдите в личный кабинет",
-  "Введите код из смс": "Введите код из смс",
-  "Введите пароль": "Введите пароль",
-  "Придумайте новый пароль": "Придумайте новый пароль",
-  "Регистрация": "Регистрация",
-  "Придумайте пароль": "Придумайте пароль",
+  " карта": " карта.",
+  "Надежная карта на каждый день": "Надежная карта на каждый день",
+  "Уровень премиальность": "Уровень премиальность",
+  "Валюта счета": "Валюта счета",
+  "Да": "Да",
+  "Нет": "Нет",
+  "Виртуальная": "Виртуальная",
+  "Плата за использование": "Плата за использование",
+  "Срок действия": "Срок действия",
+  "Баланс": "Баланс",
+  "Номер карты": "Номер карты",
+  "Информация по карте": "Информация по карте",
+  "Перевести": "Перевести",
+  "Оформить карту": "Оформить карту",
+  "Показать больше": "Показать больше",
+  "Процентная ставка": "Процентная ставка",
+  "Сумма на депозитном счете": "Сумма на депозитном счете",
+  "Окончание срока вклада": "Окончание срока вклада",
   "Адрес": "Адрес",
   "Адрес куда банк будет направлять почтовую корреспонденцию": "Адрес куда банк будет направлять почтовую корреспонденцию",
   "Улица": "Улица",
@@ -46,26 +32,36 @@
     " Звонок бесплатный": "Чтобы привязать новый телефон позвоните по номеру 8 800 666-99-98. Звонок бесплатный"
   },
   "На почту приходят счета и справки": "На почту приходят счета и справки",
+  "На данный момент \n у Вас нет соответствующих карт": "На данный момент \n у Вас нет соответствующих карт",
+  "Создать карту": "Создать карту",
   "Отменить": "Отменить",
   "Сохранить": "Сохранить",
-  "Изменить": "Изменить",
-  "Добавить": "Добавить",
   "Текущий пароль": "Текущий пароль",
   "Новый пароль": "Новый пароль",
-  "Личные данные": "Личные данные",
-  "Безопасность": "Безопасность",
-  "Изменить пароль": "Изменить пароль",
-  "Уведомления": "Уведомления",
-  "Способ получения уведомлений": "Способ получения уведомлений",
-  "Email-оповещения": "Email-оповещения",
-  "SMS-оповещения": "SMS-оповещения",
-  "Push-оповещения": "Push-оповещения",
-  "Категория уведомлений": "Категория уведомлений",
-  "Денежные операции (отправить/оплатить/получить)": "Денежные операции (отправить/оплатить/получить)",
-  "Важные обновления": "Важные обновления",
-  "Новости/акции": "Новости/акции",
-  "История уведомлений": "История уведомлений",
-  "Счета": "Счета",
+  "Подтвердите новый пароль": "Подтвердите новый пароль",
+  "Продолжить": "Продолжить",
+  "Повторная отправка через": "Повторная отправка через",
+  "Отправить смс еще раз": "Отправить смс еще раз",
+  "На Ваш номер телефона отправлен 6-значный код подтверждения": "На Ваш номер телефона отправлен 6-значный код подтверждения",
+  "Далее": "Далее",
+  "Подтвердите пароль": "Подтвердите пароль",
+  "Отправить": "Отправить",
+  "Номер телефона": "Номер телефона",
+  "Номер телефона должен содержать 11 цифр": "Номер телефона должен содержать 11 цифр",
+  "Нажав кнопку «Далее», вы соглашаетесь с ": "Нажав кнопку «Далее», вы соглашаетесь с ",
+  "Правилами дистанционного банковского обслуживания": "Правилами дистанционного банковского обслуживания",
+  "и": "и",
+  "Политикой конфиденциальности": "Политикой конфиденциальности",
+  "и даёте согласие на сбор и обработку информации": "и даёте согласие на сбор и обработку информации",
+  "Отклонить": "Отклонить",
+  "Пароль": "Пароль",
+  "Включен CapsLock": "Включен CapsLock",
+  "Восстановление пароля": "Восстановление пароля",
+  "Выйти": "Выйти",
+  "У вас уже есть аккаунт?": "У вас уже есть аккаунт?",
+  "Зарегистрируйтесь": "Зарегистрируйтесь",
+  "Авторизуйтесь": "Авторизуйтесь",
+  "Назад": "Назад",
   "Кредитный счет": "Кредитный счет",
   "Дебетовый счет": "Дебетовый счет",
   "Депозитный счет": "Депозитный счет",
@@ -84,61 +80,11 @@
   "Не удалось открыть счет": "Не удалось открыть счет",
   "Мы открыли вам счет!": "Мы открыли вам счет!",
   "Перейти к списку счетов": "Перейти к списку счетов",
-  "Карты": "Карты",
-  "Создать карту": "Создать карту",
-  "Виртуальная": "Виртуальная",
-  "На данный момент \n у Вас нет соответствующих карт": "На данный момент \n у Вас нет соответствующих карт",
-  "Номер карты": "Номер карты",
-  "Баланс": "Баланс",
-  "Валюта счета": "Валюта счета",
-  "Уровень премиальность": "Уровень премиальность",
-  "Информация по карте": "Информация по карте",
-  "Оформить карту": "Оформить карту",
-  "Показать больше": "Показать больше",
-  "Срок действия": "Срок действия",
-  "Мои карты": "Мои карты",
-  "Карточные продукты": "Карточные продукты",
   "Bce": "Bce",
   "Кредитная": "Кредитная",
   "Дебетовая": "Дебетовая",
   "Депозитная": "Депозитная",
   "МИР": "МИР",
-  "Информация по депозиту": "Информация по депозиту",
-  "Оформить": "Оформить",
-  "Пополнить": "Пополнить",
-  "Да": "Да",
-  "Нет": "Нет",
-  "Отозвать": "Отозвать",
-  "Пролонгировать": "Пролонгировать",
-  "Мои депозиты": "Мои депозиты",
-  "Депозиты": "Депозиты",
-  "Отключить автопролонгацию": "Отключить автопролонгацию",
-  "Включить автопролонгацию": "Включить автопролонгацию",
-  "Автоматическая пролонгация": "Автоматическая пролонгация",
-  "Депозиты A-geld": "Депозиты A-geld",
-  "Процентная ставка": "Процентная ставка",
-  "Сумма на депозитном счете": "Сумма на депозитном счете",
-  "Изначальная сумма депозита": "Изначальная сумма депозита",
-  "Схема депозита": "Схема депозита",
-  "К списку депозитов": "К списку депозитов",
-  "Срочный": "Срочный",
-  "№ счета с процентами": "№ счета с процентами",
-  "Отзывной": "Отзывной",
-  "Процентная ставка при досрочном отзыве депозита": "Процентная ставка при досрочном отзыве депозита",
-  "Длительность существования": "Длительность существования",
-  "Окончание срока вклада": "Окончание срока вклада",
-  "Выполнить депозит": "Выполнить депозит",
-  "На данный момент \n у Вас нет депозитов": "На данный момент \n у Вас нет депозитов",
-  "Главная": "Главная",
-  "Курсы валют": "Курсы валют",
-  "Контакты": "Контакты",
-  "Список услуг": "Список услуг",
-  "Документы": "Документы",
-  "Вопросы и ответы": "Вопросы и ответы",
-  "Банки и отделения": "Банки и отделения",
-  "Кредиты": "Кредиты",
-  "Переводы": "Переводы",
-  "Платежи": "Платежи",
   "Все": "Все",
   "Активный": "Активный",
   "Закрытый": "Закрытый",
@@ -147,9 +93,65 @@
   "Автопролонгация": "Автопролонгация",
   "Автопролонгация отключена": "Автопролонгация отключена",
   "Реквизиты": "Реквизиты",
-  "У вас уже есть аккаунт?": "У вас уже есть аккаунт?",
-  "Зарегистрируйтесь": "Зарегистрируйтесь",
-  "Авторизуйтесь": "Авторизуйтесь",
+  "Комиссия за снятие наличных в банкомате другого банка": "Комиссия за снятие наличных в банкомате другого банка",
+  "Комиссия за снятие наличных в банкомате банка-партнёра": "Комиссия за снятие наличных в банкомате банка-партнёра",
+  "Комиссия за снятие наличных в другой валюте в банкоматах банков за рубежом": "Комиссия за снятие наличных в другой валюте в банкоматах банков за рубежом",
+  "Комиссия за переводы при исчерпании лимита": "Комиссия за переводы при исчерпании лимита",
+  "Комиссия за оплату при исчерпании лимита": "Комиссия за оплату при исчерпании лимита",
+  "Лимит на снятие денег в день": "Лимит на снятие денег в день",
+  "Лимит на снятие денег в месяц": "Лимит на снятие денег в месяц",
+  "Лимит на сумму переводов в день": "Лимит на сумму переводов в день",
+  "Лимит на сумму переводов в месяц": "Лимит на сумму переводов в месяц",
+  "Лимит на безналичные платежи в день": "Лимит на безналичные платежи в день",
+  "Лимит на безналичные платежи в месяц": "Лимит на безналичные платежи в месяц",
+  "Лимит на снятие денег в день без комиссии": "Лимит на снятие денег в день без комиссии",
+  "Лимит на снятие денег в месяц без комиссии": "Лимит на снятие денег в месяц без комиссии",
+  "Лимит на сумму переводов в день без комиссии": "Лимит на сумму переводов в день без комиссии",
+  "Лимит на сумму переводов в месяц без комиссии": "Лимит на сумму переводов в месяц без комиссии",
+  "Лимит на безналичные платежи в день без комиссии": "Лимит на безналичные платежи в день без комиссии",
+  "Лимит на безналичные платежи в месяц без комиссии": "Лимит на безналичные платежи в месяц без комиссии",
+  "Реквизиты карты": "Реквизиты карты",
+  "Тарифы и комиссии": "Тарифы и комиссии",
+  "Лимиты": "Лимиты",
+  "История операций": "История операций",
+  "Выписка": "Выписка",
+  "Пополнить": "Пополнить",
+  "Изменить пин-код": "Изменить пин-код",
+  "Запретить операции": "Запретить операции",
+  "Заблокировать карту": "Заблокировать карту",
+  "Действия с картой": "Действия с картой",
+  "Условия": "Условия",
+  "Карты": "Карты",
+  "Мои карты": "Мои карты",
+  "Карточные продукты": "Карточные продукты",
+  "На данный момент \n у Вас нет депозитов": "На данный момент \n у Вас нет депозитов",
+  "Оформить депозит": "Оформить депозит",
+  "Депозиты": "Депозиты",
+  "Мои депозиты": "Мои депозиты",
+  "Депозиты A-geld": "Депозиты A-geld",
+  "2023, АО «A-Geld», официальный сайт, универсальная лицензия ЦБ РФ № 2475": "2023, АО «A-Geld», официальный сайт, универсальная лицензия ЦБ РФ № 2475",
+  "для звонков по России": "для звонков по России",
+  "Наше приложение": "Наше приложение",
   "Банкоматы и отделения": "Банкоматы и отделения",
-  "Войти": "Войти"
+  "Курсы валют": "Курсы валют",
+  "Контакты": "Контакты",
+  "Список услуг": "Список услуг",
+  "Документы": "Документы",
+  "Вопросы и ответы": "Вопросы и ответы",
+  "Личные данные": "Личные данные",
+  "Войти": "Войти",
+  "Регистрация": "Регистрация",
+  "Новая карта": "Новая карта",
+  "Переводы": "Переводы",
+  "Между счетами": "Между счетами",
+  "По номеру телефона": "По номеру телефона",
+  "По номеру карты": "По номеру карты",
+  "По реквизитам": "По реквизитам",
+  "Платежи": "Платежи",
+  "Мобильная связь": "Мобильная связь",
+  "Коммунальные платежи": "Коммунальные платежи",
+  "Успех": "Успех",
+  "Ошибка": "Ошибка",
+  "Операция прошла успешно": "Операция прошла успешно",
+  "Повторите запрос позже": "Повторите запрос позже"
 }
