--- a/src/shared/model/i18n/locales/en/en_old.json
+++ b/src/shared/model/i18n/locales/en/en_old.json
@@ -7,5 +7,37 @@
   "Количество символов от 6 до 20": "Number of characters from 6 to 20",
   "Есть строчные и заглавные буквы": "There are lowercase and uppercase letters",
   "Используйте только буквы (a-z, A-Z), цифры и символы {{symbols}}": "Use only letters (a-z, A-Z), numbers and symbols {{symbols}}",
-  "Есть специальные символы": "There are special characters"
+  "Есть специальные символы": "There are special characters",
+  "Условия пролонгации депозита": "Условия пролонгации депозита",
+  "Ваш депозит успешно пролонгирован": "Ваш депозит успешно пролонгирован",
+  "Вернуться к странице депозита": "Вернуться к странице депозита",
+  "Срок пролонгации": "Срок пролонгации",
+  "мес": "мес.",
+  "Пролонгировать депозит": "Пролонгировать депозит",
+  "Войдите в личный кабинет": "Log in to your personal account",
+  "Введите код из смс": "Enter the code from SMS",
+  "Введите пароль": "Enter password",
+  "Придумайте новый пароль": "Come up with a new password",
+  "Придумайте пароль": "Create a password",
+  "Информация по депозиту": "Deposit information",
+  "Оформить": "Apply",
+  "Отозвать": "Withdraw",
+  "Пролонгировать": "Prolong",
+  "Отключить автопролонгацию": "Disable automatic prolongation",
+  "Включить автопролонгацию": "Enable automatic prolongation",
+  "Автоматическая пролонгация": "Automatic prolongation",
+  "Изначальная сумма депозита": "Initial deposit amount",
+  "Схема депозита": "Deposit scheme",
+  "К списку депозитов": "Go to deposit list",
+  "Срочный": "Urgent",
+  "№ счета с процентами": "Account number with interest",
+  "Отзывной": "Revocable",
+  "Процентная ставка при досрочном отзыве депозита": "Interest rate for early deposit withdrawal",
+  "Длительность существования": "Term of existence",
+  "Выполнить депозит": "Make a deposit",
+  "Банки и отделения": "Banks and branches",
+  "Главная": "Main",
+  "Счета": "Accounts",
+  "Кредиты": "Loans",
+  " ": " "
 }
