--- a/src/shared/model/i18n/locales/ru/ru_old.json
+++ b/src/shared/model/i18n/locales/ru/ru_old.json
@@ -7,5 +7,51 @@
   "Количество символов от 6 до 20": "Количество символов от 6 до 20",
   "Есть строчные и заглавные буквы": "Есть строчные и заглавные буквы",
   "Используйте только буквы (a-z, A-Z), цифры и символы {{symbols}}": "Используйте только буквы (a-z, A-Z), цифры и символы {{symbols}}",
-  "Есть специальные символы": "Есть специальные символы"
+  "Есть специальные символы": "Есть специальные символы",
+  "Условия пролонгации депозита": "Условия пролонгации депозита",
+  "Ваш депозит успешно пролонгирован": "Ваш депозит успешно пролонгирован",
+  "Вернуться к странице депозита": "Вернуться к странице депозита",
+  "Срок пролонгации": "Срок пролонгации",
+  "мес": "мес.",
+  "Пролонгировать депозит": "Пролонгировать депозит",
+  "Войдите в личный кабинет": "Войдите в личный кабинет",
+  "Введите код из смс": "Введите код из смс",
+  "Введите пароль": "Введите пароль",
+  "Придумайте новый пароль": "Придумайте новый пароль",
+  "Придумайте пароль": "Придумайте пароль",
+  "Изменить": "Изменить",
+  "Добавить": "Добавить",
+  "Безопасность": "Безопасность",
+  "Изменить пароль": "Изменить пароль",
+  "Уведомления": "Уведомления",
+  "Способ получения уведомлений": "Способ получения уведомлений",
+  "Email-оповещения": "Email-оповещения",
+  "SMS-оповещения": "SMS-оповещения",
+  "Push-оповещения": "Push-оповещения",
+  "Категория уведомлений": "Категория уведомлений",
+  "Денежные операции (отправить/оплатить/получить)": "Денежные операции (отправить/оплатить/получить)",
+  "Важные обновления": "Важные обновления",
+  "Новости/акции": "Новости/акции",
+  "История уведомлений": "История уведомлений",
+  "Информация по депозиту": "Информация по депозиту",
+  "Оформить": "Оформить",
+  "Отозвать": "Отозвать",
+  "Пролонгировать": "Пролонгировать",
+  "Отключить автопролонгацию": "Отключить автопролонгацию",
+  "Включить автопролонгацию": "Включить автопролонгацию",
+  "Автоматическая пролонгация": "Автоматическая пролонгация",
+  "Изначальная сумма депозита": "Изначальная сумма депозита",
+  "Схема депозита": "Схема депозита",
+  "К списку депозитов": "К списку депозитов",
+  "Срочный": "Срочный",
+  "№ счета с процентами": "№ счета с процентами",
+  "Отзывной": "Отзывной",
+  "Процентная ставка при досрочном отзыве депозита": "Процентная ставка при досрочном отзыве депозита",
+  "Длительность существования": "Длительность существования",
+  "Выполнить депозит": "Выполнить депозит",
+  "Банки и отделения": "Банки и отделения",
+  "Главная": "Главная",
+  "Счета": "Счета",
+  "Кредиты": "Кредиты",
+  " ": " "
 }
