fix: AGEL-1223 перевод и парсинг

--- a/src/shared/model/i18n/locales/en/en.json
+++ b/src/shared/model/i18n/locales/en/en.json
@@ -1,67 +1,91 @@
 {
-  " карта": " карта.",
-  "Надежная карта на каждый день": "Надежная карта на каждый день",
+  " карта": " card.",
+  "Надежная карта на каждый день": "Reliable card for everyday use",
   "Уровень премиальность": "Premium level",
   "Валюта счета": "Account currency",
   "Да": "Yes",
   "Нет": "No",
   "Виртуальная": "Virtual",
-  "Плата за использование": "Плата за использование",
+  "Плата за использование": "Usage fee",
   "Срок действия": "Expiry date",
   "Баланс": "Balance",
   "Номер карты": "Card number",
   "Информация по карте": "Card information",
-  "Перевести": "Перевести",
+  "Перевести": "Transfer",
   "Оформить карту": "Apply for a card",
   "Показать больше": "Show more",
   "Процентная ставка": "Interest rate",
   "Сумма на депозитном счете": "Deposit balance",
   "Окончание срока вклада": "Deposit end of term",
-  "Адрес": "Адрес",
-  "Адрес куда банк будет направлять почтовую корреспонденцию": "Адрес куда банк будет направлять почтовую корреспонденцию",
-  "Улица": "Улица",
-  "Дом": "Дом",
-  "Квартира": "Квартира",
-  "Город": "Город",
-  "Индекс": "Индекс",
-  "Для изменения адреса регистрации необходимо обратиться в ближайшее отделение банка": "Для изменения адреса регистрации необходимо обратиться в ближайшее отделение банка",
-  "Контактные данные": "Контактные данные",
-  "Телефон нужен для того, чтобы подтверждать операции и настройки счета": "Телефон нужен для того, чтобы подтверждать операции и настройки счета",
-  "Телефон": "Телефон",
-  "Чтобы привязать новый телефон позвоните по номеру 8 800 666-99-98": {
-    " Звонок бесплатный": "Чтобы привязать новый телефон позвоните по номеру 8 800 666-99-98. Звонок бесплатный"
-  },
-  "На почту приходят счета и справки": "На почту приходят счета и справки",
+  "Назад": "Back",
+  "Вперед": "Next",
+  "Основной": "Main",
+  "Адрес": "Address",
+  "Адрес куда банк будет направлять почтовую корреспонденцию": "Address where the bank will send mail correspondence",
+  "Улица": "Street",
+  "Дом": "House",
+  "Квартира": "Apartment",
+  "Город": "City",
+  "Индекс": "Postal code",
+  "Для изменения адреса регистрации необходимо обратиться в ближайшее отделение банка": "To change the registration address, please visit the nearest bank branch",
+  "Контактные данные": "Contact details",
+  "Телефон нужен для того, чтобы подтверждать операции и настройки счета": "The phone is needed to confirm transactions and account settings",
+  "Телефон": "Phone",
+  "Чтобы привязать новый телефон позвоните по номеру 8 800 666-99-98": "To link a new phone, call 8 800 666-99-98",
+  "Звонок бесплатный": "Call is free",
+  "На почту приходят счета и справки": "Bills and statements are sent to the email",
   "На данный момент \n у Вас нет соответствующих карт": "You currently have no corresponding cards",
   "Создать карту": "Create a card",
-  "Отменить": "Отменить",
-  "Сохранить": "Сохранить",
-  "Текущий пароль": "Текущий пароль",
-  "Новый пароль": "Новый пароль",
+  "Тип объекта": "Object type",
+  "Банкоматы": "ATMs",
+  "Инфокиоск": "Info kiosk",
+  "Главный офис": "Head office",
+  "Отделения банка": "Bank branches",
+  "Обменый пункт": "Exchange office",
+  "Статус работы": "Operating status",
+  "Работает": "Working",
+  "Фильтр": "Filter",
+  "Применить фильтр": "Apply filter",
+  "Отменить": "Cancel",
+  "Email должен быть валидным": "Email must be valid",
+  "Email должен содержать от 8 до 50 символов": "Email must contain from 8 to 50 characters",
+  "Сохранить": "Save",
+  "Обязательное поле": "Required field",
+  "Новый пароль должен быть валидным": "New password must be valid",
+  "Новый пароль должен отличаться от старого": "New password must differ from the old one",
+  "Пароли не совпадают": "Passwords do not match",
+  "Текущий пароль": "Current password",
+  "Новый пароль": "New password",
   "Подтвердите новый пароль": "Confirm new password",
   "Продолжить": "Continue",
   "Повторная отправка через": "Resend in",
   "Отправить смс еще раз": "Resend SMS",
   "На Ваш номер телефона отправлен 6-значный код подтверждения": "A 6-digit confirmation code has been sent to your phone number",
   "Далее": "Next",
+  "Пароль должен быть валидным": "Password must be valid",
   "Подтвердите пароль": "Confirm password",
   "Отправить": "Send",
   "Номер телефона": "Phone number",
   "Номер телефона должен содержать 11 цифр": "Phone number must contain 11 digits",
-  "Нажав кнопку «Далее», вы соглашаетесь с ": "By clicking the “Next” button, you agree to ",
+  "Нажав кнопку «Далее», вы соглашаетесь с ": "By clicking the 'Next' button, you agree to ",
   "Правилами дистанционного банковского обслуживания": "the Remote Banking Service Rules",
   "и": "and",
   "Политикой конфиденциальности": "Privacy Policy",
   "и даёте согласие на сбор и обработку информации": "and consent to the collection and processing of information",
   "Отклонить": "Decline",
+  "Поиск": "Search",
+  "Количество символов от 6 до 20": "Number of characters from 6 to 20",
+  "Есть строчные и заглавные буквы": "There are lowercase and uppercase letters",
+  "Есть цифры": "There are numbers",
+  "Используйте только буквы (a-z, A-Z), цифры и символы": "Use only letters (a-z, A-Z), numbers and symbols",
+  "Есть специальные символы": "There are special characters",
   "Пароль": "Password",
-  "Включен CapsLock": "Включен CapsLock",
+  "Включен CapsLock": "CapsLock is on",
   "Восстановление пароля": "Password recovery",
   "Выйти": "Log out",
   "У вас уже есть аккаунт?": "Do you already have an account?",
   "Зарегистрируйтесь": "Sign up",
   "Авторизуйтесь": "Sign in",
-  "Назад": "Back",
   "Кредитный счет": "Credit account",
   "Дебетовый счет": "Debit account",
   "Депозитный счет": "Deposit account",
@@ -85,14 +109,16 @@
   "Дебетовая": "Debit",
   "Депозитная": "Deposit",
   "МИР": "MIR",
+  "Банкомат": "ATM",
+  "Отделение банка": "Bank branch",
+  "Обменный пункт": "Exchange office",
   "Все": "All",
+  "Реквизиты": "Requisites",
   "Активный": "Active",
   "Закрытый": "Closed",
   "Заблокированный": "Blocked",
-  "Основной": "Main",
   "Автопролонгация": "Autoprolongation",
   "Автопролонгация отключена": "Autoprolongation disabled",
-  "Реквизиты": "Requisites",
   "Комиссия за снятие наличных в банкомате другого банка": "Commission for cash withdrawal at another bank's ATM",
   "Комиссия за снятие наличных в банкомате банка-партнёра": "Commission for cash withdrawal at a partner bank's ATM",
   "Комиссия за снятие наличных в другой валюте в банкоматах банков за рубежом": "Commission for cash withdrawal in another currency at ATMs of banks abroad",
