--- a/src/shared/model/i18n/locales/ru/ru.json
+++ b/src/shared/model/i18n/locales/ru/ru.json
@@ -17,6 +17,9 @@
   "Процентная ставка": "Процентная ставка",
   "Сумма на депозитном счете": "Сумма на депозитном счете",
   "Окончание срока вклада": "Окончание срока вклада",
+  "Назад": "Назад",
+  "Вперед": "Вперед",
+  "Основной": "Основной",
   "Адрес": "Адрес",
   "Адрес куда банк будет направлять почтовую корреспонденцию": "Адрес куда банк будет направлять почтовую корреспонденцию",
   "Улица": "Улица",
@@ -28,14 +31,29 @@
   "Контактные данные": "Контактные данные",
   "Телефон нужен для того, чтобы подтверждать операции и настройки счета": "Телефон нужен для того, чтобы подтверждать операции и настройки счета",
   "Телефон": "Телефон",
-  "Чтобы привязать новый телефон позвоните по номеру 8 800 666-99-98": {
-    " Звонок бесплатный": "Чтобы привязать новый телефон позвоните по номеру 8 800 666-99-98. Звонок бесплатный"
-  },
+  "Чтобы привязать новый телефон позвоните по номеру 8 800 666-99-98": "Чтобы привязать новый телефон позвоните по номеру 8 800 666-99-98.",
+  "Звонок бесплатный": "Звонок бесплатный",
   "На почту приходят счета и справки": "На почту приходят счета и справки",
   "На данный момент \n у Вас нет соответствующих карт": "На данный момент \n у Вас нет соответствующих карт",
   "Создать карту": "Создать карту",
+  "Тип объекта": "Тип объекта",
+  "Банкоматы": "Банкоматы",
+  "Инфокиоск": "Инфокиоск",
+  "Главный офис": "Главный офис",
+  "Отделения банка": "Отделения банка",
+  "Обменый пункт": "Обменый пункт",
+  "Статус работы": "Статус работы",
+  "Работает": "Работает",
+  "Фильтр": "Фильтр",
+  "Применить фильтр": "Применить фильтр",
   "Отменить": "Отменить",
+  "Email должен быть валидным": "Email должен быть валидным",
+  "Email должен содержать от 8 до 50 символов": "Email должен содержать от 8 до 50 символов",
   "Сохранить": "Сохранить",
+  "Обязательное поле": "Обязательное поле",
+  "Новый пароль должен быть валидным": "Новый пароль должен быть валидным",
+  "Новый пароль должен отличаться от старого": "Новый пароль должен отличаться от старого",
+  "Пароли не совпадают": "Пароли не совпадают",
   "Текущий пароль": "Текущий пароль",
   "Новый пароль": "Новый пароль",
   "Подтвердите новый пароль": "Подтвердите новый пароль",
@@ -44,6 +62,7 @@
   "Отправить смс еще раз": "Отправить смс еще раз",
   "На Ваш номер телефона отправлен 6-значный код подтверждения": "На Ваш номер телефона отправлен 6-значный код подтверждения",
   "Далее": "Далее",
+  "Пароль должен быть валидным": "Пароль должен быть валидным",
   "Подтвердите пароль": "Подтвердите пароль",
   "Отправить": "Отправить",
   "Номер телефона": "Номер телефона",
@@ -54,6 +73,12 @@
   "Политикой конфиденциальности": "Политикой конфиденциальности",
   "и даёте согласие на сбор и обработку информации": "и даёте согласие на сбор и обработку информации",
   "Отклонить": "Отклонить",
+  "Поиск": "Поиск",
+  "Количество символов от 6 до 20": "Количество символов от 6 до 20",
+  "Есть строчные и заглавные буквы": "Есть строчные и заглавные буквы",
+  "Есть цифры": "Есть цифры",
+  "Используйте только буквы (a-z, A-Z), цифры и символы": "Используйте только буквы (a-z, A-Z), цифры и символы",
+  "Есть специальные символы": "Есть специальные символы",
   "Пароль": "Пароль",
   "Включен CapsLock": "Включен CapsLock",
   "Восстановление пароля": "Восстановление пароля",
@@ -61,7 +86,6 @@
   "У вас уже есть аккаунт?": "У вас уже есть аккаунт?",
   "Зарегистрируйтесь": "Зарегистрируйтесь",
   "Авторизуйтесь": "Авторизуйтесь",
-  "Назад": "Назад",
   "Кредитный счет": "Кредитный счет",
   "Дебетовый счет": "Дебетовый счет",
   "Депозитный счет": "Депозитный счет",
@@ -85,14 +109,16 @@
   "Дебетовая": "Дебетовая",
   "Депозитная": "Депозитная",
   "МИР": "МИР",
+  "Банкомат": "Банкомат",
+  "Отделение банка": "Отделение банка",
+  "Обменный пункт": "Обменный пункт",
   "Все": "Все",
+  "Реквизиты": "Реквизиты",
   "Активный": "Активный",
   "Закрытый": "Закрытый",
   "Заблокированный": "Заблокированный",
-  "Основной": "Основной",
   "Автопролонгация": "Автопролонгация",
   "Автопролонгация отключена": "Автопролонгация отключена",
-  "Реквизиты": "Реквизиты",
   "Комиссия за снятие наличных в банкомате другого банка": "Комиссия за снятие наличных в банкомате другого банка",
   "Комиссия за снятие наличных в банкомате банка-партнёра": "Комиссия за снятие наличных в банкомате банка-партнёра",
   "Комиссия за снятие наличных в другой валюте в банкоматах банков за рубежом": "Комиссия за снятие наличных в другой валюте в банкоматах банков за рубежом",
