--- a/src/shared/model/i18n/locales/en/en_old.json
+++ b/src/shared/model/i18n/locales/en/en_old.json
@@ -1,13 +1,7 @@
 {
   "Клиент не найден!": "Client not found",
   "Повторная отправка через {{seconds}}": "repeat send",
-  " / ": {
-    " ; < = > ? @ [  ] ^ _` { | } ~": " / . ; < = > ? @ [  ] ^ _` { | } ~"
-  },
-  "Количество символов от 6 до 20": "Number of characters from 6 to 20",
-  "Есть строчные и заглавные буквы": "There are lowercase and uppercase letters",
   "Используйте только буквы (a-z, A-Z), цифры и символы {{symbols}}": "Use only letters (a-z, A-Z), numbers and symbols {{symbols}}",
-  "Есть специальные символы": "There are special characters",
   "Условия пролонгации депозита": "Условия пролонгации депозита",
   "Ваш депозит успешно пролонгирован": "Ваш депозит успешно пролонгирован",
   "Вернуться к странице депозита": "Вернуться к странице депозита",
@@ -39,5 +33,11 @@
   "Главная": "Main",
   "Счета": "Accounts",
   "Кредиты": "Loans",
-  " ": " "
+  " ": " ",
+  " / ": {
+    " ; < = > ? @ [  ] ^ _` { | } ~": " / . ; < = > ? @ [  ] ^ _` { | } ~"
+  },
+  "Чтобы привязать новый телефон позвоните по номеру 8 800 666-99-98": {
+    " Звонок бесплатный": "Чтобы привязать новый телефон позвоните по номеру 8 800 666-99-98. Звонок бесплатный"
+  }
 }
