--- a/src/shared/model/i18n/locales/ru/ru_old.json
+++ b/src/shared/model/i18n/locales/ru/ru_old.json
@@ -1,13 +1,7 @@
 {
   "Клиент не найден!": "Клиент не найден!",
   "Повторная отправка через {{seconds}}": "Повторная отправка через {{seconds}}",
-  " / ": {
-    " ; < = > ? @ [  ] ^ _` { | } ~": " / . ; < = > ? @ [  ] ^ _` { | } ~"
-  },
-  "Количество символов от 6 до 20": "Количество символов от 6 до 20",
-  "Есть строчные и заглавные буквы": "Есть строчные и заглавные буквы",
   "Используйте только буквы (a-z, A-Z), цифры и символы {{symbols}}": "Используйте только буквы (a-z, A-Z), цифры и символы {{symbols}}",
-  "Есть специальные символы": "Есть специальные символы",
   "Условия пролонгации депозита": "Условия пролонгации депозита",
   "Ваш депозит успешно пролонгирован": "Ваш депозит успешно пролонгирован",
   "Вернуться к странице депозита": "Вернуться к странице депозита",
@@ -53,5 +47,11 @@
   "Главная": "Главная",
   "Счета": "Счета",
   "Кредиты": "Кредиты",
-  " ": " "
+  " ": " ",
+  " / ": {
+    " ; < = > ? @ [  ] ^ _` { | } ~": " / . ; < = > ? @ [  ] ^ _` { | } ~"
+  },
+  "Чтобы привязать новый телефон позвоните по номеру 8 800 666-99-98": {
+    " Звонок бесплатный": "Чтобы привязать новый телефон позвоните по номеру 8 800 666-99-98. Звонок бесплатный"
+  }
 }
