feat: AGEL-1224 добавлена локализация и интернационализация Epic-4

--- a/src/shared/model/i18n/locales/en/en.json
+++ b/src/shared/model/i18n/locales/en/en.json
@@ -35,11 +35,29 @@
   "Кредитный счет": "Credit account",
   "Дебетовый счет": "Debit account",
   "Депозитный счет": "Deposit account",
+  "№ счета: ": "Account number: ",
   "Мои счета": "My accounts",
+  "Дата открытия счета": "Account opening date",
+  "Дата закрытия счета": "Account closing date",
+  "Причина блокировки": "Blocking Reason",
   "Открытые счета": "Opened accounts",
   "Заявки на открытие счета": "Open account requests",
   "Закрытые счета": "Closed accounts",
   "Заблокированные счета": "Blocked accounts",
+  "Реквизиты": "Requisites",
+  "Выписка по счету": "Account statement",
+  "Сделать основным": "Make primary",
+  "Закрыть счет": "Close account",
+  "Заблокировать счет": "Block account",
+  "Разблокировать счет": "Unlock account",
+  "Статус заявки": "Application status",
+  "Счет не найден": "Account not found",
+  "Выберите тип счета": "Select account type",
+  "Выберите валюту": "Select currency",
+  "Выберите тип карты": "Select card type",
+  "Ознакомьтесь с условиями счета": "Check the account terms",
+  "Информация о счете": "Account Information",
+  "История операций": "Operations history",
   "На данный момент \n у Вас нет соответствующих счетов": "You currently have no corresponding accounts",
   "Открыть счет": "Open account",
   "Больше денег без лишних вложений": "More money without extra investment",
