--- a/src/shared/model/i18n/locales/ru/ru.json
+++ b/src/shared/model/i18n/locales/ru/ru.json
@@ -69,11 +69,29 @@
   "Кредитный счет": "Кредитный счет",
   "Дебетовый счет": "Дебетовый счет",
   "Депозитный счет": "Депозитный счет",
+  "№ счета: ": "№ счета: ",
   "Мои счета": "Мои счета",
+  "Дата открытия счета": "Дата открытия счета",
+  "Дата закрытия счета": "Дата закрытия счета",
+  "Причина блокировки": "Причина блокировки",
   "Открытые счета": "Открытые счета",
   "Заявки на открытие счета": "Заявки на открытие счета",
   "Закрытые счета": "Закрытые счета",
   "Заблокированные счета": "Заблокированные счета",
+  "Реквизиты": "Реквизиты",
+  "Выписка по счету": "Выписка по счету",
+  "Сделать основным": "Сделать основным",
+  "Закрыть счет": "Закрыть счет",
+  "Заблокировать счет": "Заблокировать счет",
+  "Разблокировать счет": "Разблокировать счет",
+  "Статус заявки": "Статус заявки",
+  "Счет не найден": "Счет не найден",
+  "Выберите тип счета": "Выберите тип счета",
+  "Выберите валюту": "Выберите валюту",
+  "Выберите тип карты": "Выберите тип карты",
+  "Ознакомьтесь с условиями счета": "Ознакомьтесь с условиями счета",
+  "Информация о счете": "Информация о счете",
+  "История операций": "История операций",
   "На данный момент \n у Вас нет соответствующих счетов": "На данный момент \n у Вас нет соответствующих счетов",
   "Открыть счет": "Открыть счет",
   "Больше денег без лишних вложений": "Больше денег без лишних вложений",
@@ -146,7 +164,6 @@
   "Основной": "Основной",
   "Автопролонгация": "Автопролонгация",
   "Автопролонгация отключена": "Автопролонгация отключена",
-  "Реквизиты": "Реквизиты",
   "У вас уже есть аккаунт?": "У вас уже есть аккаунт?",
   "Зарегистрируйтесь": "Зарегистрируйтесь",
   "Авторизуйтесь": "Авторизуйтесь",
