--- a/src/shared/model/i18n/locales/en/en_old.json
+++ b/src/shared/model/i18n/locales/en/en_old.json
@@ -39,5 +39,6 @@
   },
   "Чтобы привязать новый телефон позвоните по номеру 8 800 666-99-98": {
     " Звонок бесплатный": "Чтобы привязать новый телефон позвоните по номеру 8 800 666-99-98. Звонок бесплатный"
-  }
+  },
+  " карта": " card."
 }
