--- a/src/shared/model/i18n/locales/ru/ru_old.json
+++ b/src/shared/model/i18n/locales/ru/ru_old.json
@@ -53,5 +53,6 @@
   },
   "Чтобы привязать новый телефон позвоните по номеру 8 800 666-99-98": {
     " Звонок бесплатный": "Чтобы привязать новый телефон позвоните по номеру 8 800 666-99-98. Звонок бесплатный"
-  }
+  },
+  " карта": " карта."
 }
